# iso21177-automotive

./: .gitignore  gradle.properties  keystore.properties  local.properties  settings.gradle  settings.gradle.kts
automotive/: build.gradle.kts
automotive/src/main/: AndroidManifest.xml
automotive/src/main/java/com/qfree/its/iso21177poc/: MessageReadReceiver.java  MessageReplyReceiver.java  MyMessagingService.java
automotive/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
iso21177poc/automotive/: build.gradle
iso21177poc/automotive/src/androidTest/java/com/qfree/its/geoflow_automotive/automotive/: ExampleInstrumentedTest.java
iso21177poc/automotive/src/main/: AndroidManifest.xml
iso21177poc/automotive/src/test/java/com/qfree/its/geoflow_automotive/automotive/: ExampleUnitTest.java
iso21177poc/common/: build.gradle
iso21177poc/common/src/androidTest/java/com/qfree/its/geoflow_automotive/common/: ExampleInstrumentedTest.java
iso21177poc/common/src/main/: AndroidManifest.xml
iso21177poc/common/src/main/cpp/: CMakeLists.txt  common.cpp  cpp-test.cpp  http-headers.h  rfc8902-client.cpp
iso21177poc/common/src/main/cpp/openssl/crypto/: buildinf.h
iso21177poc/common/src/main/cpp/openssl/include/openssl/: configuration.h  ssl.h
iso21177poc/common/src/main/cpp/openssl/ssl/: ieee1609dot2.c  ssl_lib.c  tls_srp.c
iso21177poc/common/src/main/java/com/qfree/its/iso21177poc/common/app/: DatexFetchHttp.java  DatexReply.java  DatexResponse.java  DatexVmsSign.java  MainActivity.java  MapActivity.java  MapHandler.java  OsmdroidUtils.java  Rfc8902.java  TripSummary.java
iso21177poc/common/src/main/java/com/qfree/its/iso21177poc/common/car/: CarHardwareUtils.java  CarPropertyClient.java  CarPropertyGear.java  CarPropertyIgnitionState.java  CarPropertyUtils.java  GeoFlowCarAppService.java  InfoScreen.java  RequestPermissionScreen.java  SignInScreen.java  TollInfoScreen.java
iso21177poc/common/src/main/java/com/qfree/its/iso21177poc/common/geoflow/: Config.java  EncryptedKeyInfo.java  EncryptionKeyUtils.java  EventHandler.java  GeoFlowAccountRecord.java  GeoFlowAccountUtils.java  GeoFlowSQLiteDb.java  GeoFlowService.java  GeoFlowServiceNotification.java  InitServiceBroadcastReceiver.java  LocationClient.java  LocationUtils.java  PermissionUtils.java  PreferenceKey.java  QfreePosImpl.java  UiFields.java  UiUtils.java
iso21177poc/common/src/main/java/com/qfree/its/iso21177poc/common/geoflow/stats/: StatCollector.java  StatFields.java
iso21177poc/common/src/main/java/com/qfree/its/iso21177poc/common/geoflow/thick_client/: BillingPeriod.java  CostTableImpl.java  GeoFlowTollingUtils.java  InvoiceIntervalType.java  PrivateVaultImpl.java  ThickClientPostEvent.java  ThickClientPostThread.java  TollZoneGetEvent.java  TollZoneGetThread.java
iso21177poc/common/src/main/java/com/qfree/its/iso21177poc/common/geoflow/thin_client/: FileLogger.java  LogEvents.java  LogFile.java  LogFilePostEvent.java  LogFilePostThread.java  LogFormatStrings.java
iso21177poc/common/src/main/res/drawable/: ic_place_24_green.xml  ic_place_24_red.xml  ic_restart_alt_24.xml  rounded_box.xml
iso21177poc/common/src/main/res/layout/: activity_main.xml  activity_map.xml  content_debug.xml
iso21177poc/common/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
iso21177poc/common/src/main/res/values-night/: themes.xml
iso21177poc/common/src/main/res/xml/: automotive_app_desc.xml  network_security_config.xml
iso21177poc/common/src/test/java/com/qfree/its/geoflow_automotive/common/: ExampleUnitTest.java
iso21177poc/mobile/: build.gradle
iso21177poc/mobile/src/androidTest/java/com/qfree/its/geoflow_automotive/mobile/: ExampleInstrumentedTest.java
iso21177poc/mobile/src/main/: AndroidManifest.xml
iso21177poc/mobile/src/main/res/values/: themes.xml
iso21177poc/mobile/src/main/res/values-night/: themes.xml
iso21177poc/mobile/src/test/java/com/qfree/its/geoflow_automotive/mobile/: ExampleUnitTest.java
mobile/: build.gradle.kts
mobile/src/androidTest/java/com/qfree/its/iso21177poc/: ExampleInstrumentedTest.java
mobile/src/main/: AndroidManifest.xml
mobile/src/main/java/com/qfree/its/iso21177poc/: MainActivity.java
mobile/src/main/res/values/: strings.xml  themes.xml
mobile/src/main/res/values-night/: themes.xml
mobile/src/test/java/com/qfree/its/iso21177poc/: ExampleUnitTest.java
